# gemeaux

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  example_app.py  pyproject.toml  server.py  setup.cfg  tox.ini
.github/workflows/: tox-tests.yaml
examples/static/: index.gmi  other.gmi
examples/static/empty-dir/: one.gmi  two.gmi
examples/static/mimetypes/: index.gmi  test.txt
examples/static/sub-dir/: index.gmi
examples/templates/: template.txt
gemeaux/: __init__.py  exceptions.py  handlers.py  responses.py
tests/: conftest.py  test_app_config.py  test_check_url.py  test_config.py  test_crlf.py  test_get_response.py  test_get_route.py  test_handlers.py  test_responses.py
