[metadata]
name = gemeaux
version = 0.0.0.dev0
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/gemeaux
description = A Python Gemini server
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = gemini protocol server
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3


[options]
zip_safe = false
python_requires = >=3.0
packages = gemeaux

[bdist_wheel]
universal = 1
