[metadata]
name = gemeaux
version = attr: gemeaux.__version__
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/gemeaux
description = A Python Gemini server
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = gemini protocol server
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = false
python_requires = >=3.6
packages = gemeaux

[flake8]
ignore = E203,E501
max-line-length = 88
